--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,23 +8,28 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header{
+    list-style-type: none;
+
+}
+
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+header div {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +37,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+header div ul {
     list-style-type: none;
 }
 
-.header div ul li {
+header div ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -50,6 +55,47 @@ p {
     font-size: 16px;
 }
 
+/* added the nav here to edit the nav, I had to push the nav up. */
+nav {
+    bottom: 50px;
+    position: relative;
+    text-align: right;
+}
+
+ /*chnaged the class to footer */
+footer {
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+
+footer h2 {
+    font-size: 20px;
+}
+section {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+/* added the figure here to clean up and use from my html. */
+figure {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+/* added the figure here to clean up and use from my html. */
+figure img {
+    max-height: 200px;
+}
+figure h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
 .hero {
     height: 800px;
     width: 100%;
@@ -69,17 +115,13 @@ p {
     margin-left: 25px;
 }
 
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
 
 .benefits {
     margin-right: 20px;
     padding: 20px;
     clear: both;
     float: right;
+    right: 20px; 
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
@@ -89,6 +131,8 @@ p {
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
+    right: -5px;
+    position: relative;
 }
 
 .benefit-brand {
@@ -99,6 +143,8 @@ p {
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
+    right: -17px;
+    position: relative;
 }
 
 .benefit-lead h3 {
@@ -134,14 +180,8 @@ p {
     max-width: 150px;
 }
 
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
+/* added the figure here to clean up and use from my html. */
+
 
 .online-reputation-management {
     margin-bottom: 20px;
@@ -162,9 +202,7 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
-    max-height: 200px;
-}
+
 
 .online-reputation-management img {
     max-height: 200px;
@@ -174,10 +212,7 @@ p {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+
 
 .online-reputation-management h2 {
     margin-bottom: 20px;
@@ -187,15 +222,4 @@ p {
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
-
-.footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-.footer h2 {
-    font-size: 20px;
 }
